Refactor SecretSourceResolver map initialization and clarify UpdateCenterConfigurator intent